ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-04-26 Benedikt Heintel
	- DISTS:
		* Fixed #1778: (FreeBSD) Add FreeBSD Patch

2009-04-25 Benedikt Heintel
	- TOOLS:
		* Update phpMyAdmin to version 3.1.4

2009-04-24 Jochen Manz
	- GUI:
		* missing db updates for per-domain backup #2

2009-04-24 Malte Geierhos
	- GUI:
		* Fixed #1803 (wrong link) -> disabled the function
		* Fixed Image_URL always wrong in Filemanager

2009-04-23 Malte Geierhos
	- ENGINE:
		* Added FISA4 backup per domain switch.
	- GUI:
		* Added FISA4 backup per domain switch
		* Fixed #1794 (smtps - missing in serverstatus)

2009-04-23 Thomas Häber
	- THEMES:
		* Fixed problem in JavaScript confirmation in client's ticket system, thanks to Thomas Wacker

2009-04-22 Malte Geierhos
	- ENGINE:
		* Fixed #1777 (invalid Permissions after Backup Restore)

2009-04-22 Andreca Daniel
	- CONFIGS:
		* Add support for Debian Squeeze

2009-04-21 Benedikt Heintel
	- CONFIGS:
		* Fixed #1792: Debian Version-Check need an Update for 5.0.1
	- LANGUAGES:
		* Fixed #1779: Catalan translation update

2009-04-21 Malte Geierhos
	- TOOLS:
		* Fixed #1789: update phpMyAdmin to 3.1.3.2
		* Fixed #1780: reenabled omega style in filemanager

2009-04-20 Malte Geierhos
	- CONFIG FILES:
		* Fixed #1793: Optimize the fcgid Config
	- ENGINE:
		* Added specfile for rpmbuild thanks to George Machitidze
		* Fixed #1752: Adding of domain aliases broken in r1584
		* Fixed #1775 (changed regex to match imap.log for dovecot as well -> thx Bene)
	- GUI:
		* Fixed #1618 (added vhost prefix to allow setting either http:// or https:// )
		* Fixed #1688 & #1691 Thanks to Andrew Clarke

2009-04-20 Thomas Häber
	- LANGUAGES:
		* Fixed #1796: deutsch / englisch BUG in the Stable 1.0
	- THEMES:
		* Partially fix for Ticket #1787: Broken layout in IE because of doctype definition

2009-04-19 Thomas Häber
	- GUI:
		* Fixed word wrap problem with long descriptions, which results in hugh webpage widths