@@ -1,6 +1,10 @@
 ispCP ω 1.0.1 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-04-27 Christian Hernmarck
+	- CONFIGS:
+		* Fixed #1806 - Typo/Error in: configs/debian/database/database.sql
+
 2009-04-26 Benedikt Heintel
 	- DISTS:
 		* Fixed #1778: (FreeBSD) Add FreeBSD Patch
